--- a/i/style.css
+++ b/i/style.css
@@ -1,6 +1,7 @@
 :root {
     --main: #00a2e8;
     --seco: #6dd3fe;
+    --maindm: #005980;
 }
 
 * {
@@ -17,6 +18,59 @@ html {
     body {
         display: flex;
         flex-direction: column;
+
+        #infobox {
+            padding: 0 1%;
+
+            width: fit-content;
+            height: fit-content;
+            position: fixed;
+            display: none;
+            
+            background-color: var(--main);
+
+            border-radius: 5px;
+
+            transition: 0.5s opacity;
+
+            z-index: 10;
+
+        }
+
+        #overlay {
+            width: 100%;
+            height: 100%;
+
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
+
+            position: fixed;
+            /* visibility: hidden; */
+            
+            background-color: #0007;
+
+            box-shadow: 5px 10px #888888;
+
+            z-index: 98;
+
+            #mdbox {
+                width: 50%;
+                height: 50%;
+                
+                display: flex;
+                flex-direction: column;
+                align-content: center;
+                justify-content: center;
+                align-items: center;
+
+                border-radius: 25px;
+
+                background-color: #fff;
+            }
+
+        }
 
         header {
             padding: 1%;
@@ -179,6 +233,25 @@ html {
 
                 }
     
+            }
+
+        }
+
+        footer {
+            padding: 1%;
+            height: 15%;
+
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+
+            background-color: var(--main);
+
+            div {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+
             }
 
         }
